<resources>
    <string name="app_name">Yoni Beaton Reddy Mux</string>
    <string name="languages">Language</string>
    <string name="indystry_project">Industrial project establishment license</string>
    <string name="sub_industrial_project_name">Industrial Project Name</string>
    <string name="yoni_beaton_reddy_mux">Yoni Beaton Reddy Mux</string>
    <string name="initial_approval_number">Initial Approval Number</string>
    <string name="initial_approval_number_value">827</string>
    <string name="initial_approval_start_date">Initial approval Start  Date</string>
    <string name="initial_approval_start_date_value">13/01/2018</string>
    <string name="initial_approval_expiry_date">Initial approval Expiry Date</string>
    <string name="initial_approval_expiry_date_value">16/08/2023</string>
    <string name="location">Location</string>
    <string name="zone_number">Zone Number</string>
    <string name="location_value">Small and Medium Industries Area</string>
    <string name="zone_number_value">92</string>
    <string name="street">Street</string>
    <string name="building_number">Building Number</string>
    <string name="street_value">712</string>
    <string name="building_number_value">46</string>
    <string name="service_fee">Service Fee</string>
    <string name="time_of_service">Time of Service</string>
    <string name="service_fee_value">500 QAR</string>
    <string name="time_of_service_value">5 Working Days</string>
    <string name="license_status">License Status</string>
    <string name="license_status_value">Active</string>
    <string name="next_btn">Next</string>
    <string name="main_data">Main Data</string>
    <string name="project_site_date">Project Site Data</string>
    <string name="products">Products</string>
    <string name="machines_and_spare_parts">Machines and Spare Parts</string>
    <string name="raw_materials">Raw Materials</string>
    <string name="needed_workers">Needed Workers</string>
    <string name="annual_utility">Annual Utility</string>
    <string name="attachments">Attachments</string>
    <string name="back_btn">Back</string>
    <string name="project_owners">Project Owners</string>
    <string name="owner_name1">Owner Name 1</string>
    <string name="owner_name2">Owner Name 2</string>
    <string name="industrial_activities">Industrial Activities</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="owner_name">Name</string>
    <string name="owner_name_value">Qatar Uni Ceramic</string>
    <string name="owner_identification_type">Identification Type</string>
    <string name="owner_identification_type_value">SSN</string>
    <string name="owner_identification_number">Identification Number</string>
    <string name="owner_identification_number_value">LNGR SaQ26</string>
    <string name="owner_nationality">Nationality</string>
    <string name="owner_nationality_value">Qatar</string>
    <string name="owner_ownership_rate">Ownership Rate</string>
    <string name="owner_ownership_rate_value">51.00</string>
    <string name="activity_code">Activity Code</string>
    <string name="activity_code_value">52180</string>
    <string name="activity_description">Activity Description</string>
    <string name="activity_description_value">Aluminum Workshops</string>
    <string name="activity_type">Activity_Type</string>
    <string name="activity_type_value">Sub-main</string>
    <string name="location_data">Location Data</string>
    <string name="pin_number">PIN Number</string>
    <string name="location_name">Location Name</string>
    <string name="zone_code">Zone Code</string>
    <string name="district_number">District Number</string>
    <string name="relation_type">Relation Type</string>
    <string name="proof_of_usufruct">Proof of usufruct, rent, ownership or possession</string>
    <string name="release_date">Release Date</string>
    <string name="lessor">Lessor</string>
    <string name="organisers">Organisers</string>
    <string name="env_permit_data">Environmental permit data</string>
    <string name="env_permit_number">Environmental Permit No.</string>
    <string name="env_permit_issue_date">Environmental Permit Issue Date</string>
    <string name="env_permit_expiry_date">Environmental Permit Expiry Date</string>
    <string name="verify">Verify</string>
    <string name="hs_code">HS Code</string>
    <string name="unit">Unit</string>
    <string name="selling_price_QAR">Selling Price QAR</string>
    <string name="annual_production_capacity">Annual Production Capacity</string>
    <string name="design_capacity">(Design Capacity)</string>
    <string name="annual_export_quantity">Annual Export Quantity</string>
    <string name="product_name">Product Name</string>
    <string name="add_btn">Add</string>
    <string name="cancel_btn">Cancel</string>
    <string name="add_products">Add Products</string>
    <string name="machine_and_the_equipment">The Machine and the equipments</string>
    <string name="spare_parts">Spare Parts</string>
    <string name="material_name">Material Name</string>
    <string name="value">Value</string>
    <string name="quantity">Quantity</string>
    <string name="job_title">Job Title</string>
    <string name="annual_salaries_QAR">Annual Salaries QAR</string>
    <string name="please_fill_in_the_following">Please fill in the following information</string>
    <string name="total_invest_capital_QAR">Total Invested Capital QAR</string>
    <string name="area">Area(m2)</string>
    <string name="electricity">Electricity(KW)</string>
    <string name="water">Water(m3)</string>
    <string name="gas_and_diesel">Gas and diesel(m3/liter)</string>
    <string name="manufacturing_stages">Manufacturing stages</string>
    <string name="attach_the_feasibility">Attach the feasibility study</string>
    <string name="upload_attachment">Upload Attachment</string>
    <string name="attach_the_land">Attach the land use plan</string>
    <string name="mb_max_for_1file">5 MB Max for 1 file ,Jpeg, Png</string>
    <string name="choose_nation">Choose Nation</string>
    <string name="India">India</string>
    <string name="china">China</string>
    <string name="america">America</string>
    <string name="pakistan">Pakistan</string>
    <string name="iran">Iran</string>
    <string name="Qatar">Qatar</string>
    <string name="canada">Canada</string>
    <string name="choose_job_title">Choose Job Title</string>
    <string name="doctor">Doctor</string>
    <string name="software_engineer">Software Engineer</string>
    <string name="hardware_engineer">Hardware Engineer</string>
    <string name="developer">Developer</string>
    <string name="teacher">Teacher</string>
    <string name="nurse">Nurse</string>
    <string name="police">Police</string>
    <string name="do_you_want_to_delete">Do you want to Delete this Products</string>
    <string name="delete">Delete</string>
    <string name="please_provide_details">Please Provide Details</string>
    <string name="required">Required</string>
    <string name="choose_hs_code">Choose HS Code</string>
    <string name="hs1111">HS1111</string>
    <string name="HS1121">HS1121</string>
    <string name="HS1131">HS1131</string>
    <string name="HS1141">HS1141</string>
    <string name="HS1151">HS1151</string>
    <string name="HS1161">HS1161</string>
    <string name="HS1171">HS1171</string>
    <string name="HS1191">HS1191</string>
    <string name="HS1181">HS1181</string>
    <string name="choose_unit">Choose Unit</string>
    <string name="metal_works">Metal Works</string>
    <string name="pin_number_must_be_valid">PIN Number must be valid</string>
    <string name="please_verify_pin_number">Please Verify PIN Number</string>
    <string name="choose_permit_number">Choose Permit Number</string>
    <string name="PR1001">PR1001</string>
    <string name="PR1002">PR1002</string>
    <string name="PR1003">PR1003</string>
    <string name="PR1004">PR1004</string>
    <string name="PR1005">PR1005</string>
    <string name="please_fill_previous_page_details">Please fill Previous Page Details</string>
    <string name="please_fill_details">Please Fill details</string>
    <string name="date_format">Mm/dd/yyyy</string>
    <string name="add_atleast_one_products">Add Atleast One Products</string>
    <string name="add_atleast_one_raw_material">Add Atleast One Raw Material</string>
    <string name="add_atleast_one_worker">Add Atleast One Worker</string>
    <string name="confirmation">Confirmation</string>
    <string name="Success">Success</string>
    <string name="your_request_has_been">Your request has been</string>
    <string name="submitted_successfully">submitted successfully. We</string>
    <string name="will_update_you_with_further">will update you with further</string>
    <string name="information">information.</string>
    <string name="Done">Done</string>
    <string name="click_next">Click Next to Continue</string>
    <string name="design_capacity_without">Design Capacity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_proof_of_usufruct_rent_ownership">choose proof of usufruct,rent,ownership or possession</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>