<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/viewBottom"
            android:layout_width="86dp"
            android:layout_height="6dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rounded_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHSCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/hs_code"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewBottom" />

        <EditText
            android:id="@+id/etHSCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_formdata_border"
            android:hint="@string/hs_code"
            android:padding="14dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHSCode" />
        <ImageView
            android:id="@+id/ivHsProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_down_arrow"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/etHSCode"
            app:layout_constraintTop_toTopOf="@+id/etHSCode"
            app:layout_constraintBottom_toBottomOf="@+id/etHSCode"/>

        <TextView
            android:id="@+id/tvUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/unit"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etHSCode" />

        <EditText
            android:id="@+id/etUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_formdata_border"
            android:hint="@string/unit"
            android:padding="14dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUnit" />
        <ImageView
            android:id="@+id/ivUnitProducts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_down_arrow"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/etUnit"
            app:layout_constraintTop_toTopOf="@+id/etUnit"
            app:layout_constraintBottom_toBottomOf="@+id/etUnit"/>

        <TextView
            android:id="@+id/tvSellingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/selling_price_QAR"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUnit" />

        <EditText
            android:id="@+id/etSellingPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_formdata_border"
            android:hint="@string/selling_price_QAR"
            android:padding="14dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSellingPrice" />

        <TextView
            android:id="@+id/tvAnnualProductionCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/annual_production_capacity"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSellingPrice" />

        <TextView
            android:id="@+id/tvDesignCapacity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_capacity"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAnnualProductionCapacity" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:layout_marginStart="2dp"
            android:textColor="@color/pink"
            app:layout_constraintStart_toEndOf="@+id/tvDesignCapacity"
            app:layout_constraintTop_toBottomOf="@+id/tvAnnualProductionCapacity"/>

        <EditText
            android:id="@+id/etAnnualProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_formdata_border"
            android:hint="@string/design_capacity_without"
            android:padding="14dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDesignCapacity" />
        <TextView
            android:id="@+id/tvErrorAnnualProduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/red"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etAnnualProduction"/>

        <TextView
            android:id="@+id/tvAnnualExportQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/annual_export_quantity"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvErrorAnnualProduction" />

        <EditText
            android:id="@+id/etAnnualExportQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_formdata_border"
            android:hint="@string/annual_export_quantity"
            android:padding="14dp"
            android:textSize="14sp"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAnnualExportQuantity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomSheet">

        <View
            android:id="@+id/viewGrey"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="100dp"
            android:background="@color/grey"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="164dp"
            android:layout_height="50dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_btn_back"
            android:gravity="center"
            android:text="@string/cancel_btn"
            android:textColor="@color/blue"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/btnAdd"
            android:layout_width="164dp"
            android:layout_height="50dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/bg_btn_back"
            android:backgroundTint="@color/blue"
            android:gravity="center"
            android:text="@string/add_btn"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btnCancel" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHsCodeProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        android:background="@drawable/bg_border"
        app:behavior_peekHeight="160dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <TextView
            android:id="@+id/tvChooseHsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_hs_code"
            android:textColor="@color/pink"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewHSProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="26dp"
            tools:listitem="@layout/hs_code_recyclerview"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            tools:ignore="MissingConstraints" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewUnitProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_hideable="true"
        android:background="@drawable/bg_border"
        app:behavior_peekHeight="160dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            android:id="@+id/tvChooseUnit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_unit"
            android:textColor="@color/pink"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewUnitProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="22dp"
            android:layout_marginTop="26dp"
            tools:listitem="@layout/unit_recyclerview"
            app:layout_constraintStart_toStartOf="@id/cardView"
            app:layout_constraintEnd_toEndOf="@+id/cardView"
            tools:ignore="MissingConstraints" />
    </androidx.cardview.widget.CardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>