<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/constraintDetailsRawMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_border_content"
        android:elevation="2dp"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvProductHSCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/hs_code"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductHSCodeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="893489458985"
            android:textColor="@color/dark_orange"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvProductHSCode"
            app:layout_constraintTop_toBottomOf="@+id/tvProductHSCode" />

        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/img_delete"
            app:layout_constraintEnd_toEndOf="@+id/tvProductHSCode"
            app:layout_constraintTop_toBottomOf="@+id/tvProductHSCode" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_name"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductHSCodeValue" />

        <TextView
            android:id="@+id/tvProductNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="Metal"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/tvProductUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/unit"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductNameValue" />

        <TextView
            android:id="@+id/tvProductUnitValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="SQ"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvProductUnit"
            app:layout_constraintTop_toBottomOf="@+id/tvProductUnit" />

        <TextView
            android:id="@+id/tvProductSellingPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="10dp"
            android:text="@string/selling_price_QAR"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductNameValue" />

        <TextView
            android:id="@+id/tvProductSellingPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="12 QAR"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvProductSellingPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvProductSellingPrice" />

        <TextView
            android:id="@+id/tvAnnualProductionCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="210dp"
            android:lineHeight="24dp"
            android:text="@string/annual_production_capacity"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvProductUnitValue" />

        <TextView
            android:id="@+id/tvAnnualProductionCapacityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="16dp"
            android:text="10000"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvAnnualProductionCapacity"
            app:layout_constraintTop_toBottomOf="@+id/tvAnnualProductionCapacity" />

        <TextView
            android:id="@+id/tvAnnualExportQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="10dp"
            android:text="@string/annual_export_quantity"
            android:textColor="@color/dark_grey"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/tvProductName"
            app:layout_constraintTop_toBottomOf="@+id/tvProductSellingPriceValue" />

        <TextView
            android:id="@+id/tvAnnualExportQuantityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvProductSellingPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvAnnualExportQuantity" />
    </androidx.constraintlayout.widget.ConstraintLayout>